--- a/static/css/public_styling.css
+++ b/static/css/public_styling.css
@@ -4,3 +4,39 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body {
+    background-color: #fffae6;
+}
+
+#hero-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 100vh;
+}
+
+.hero-section-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffe066;
+    width: 90%;
+    margin-top: 200px;
+}
+
+.text-hero-part {
+    max-width: 500px;
+}
+
+.image-hero-part img {
+    max-width: 400px;
+}
+
+h1 {
+    font-size: 3rem;
+}
