--- a/static/css/public_styling.css
+++ b/static/css/public_styling.css
@@ -16,6 +16,7 @@ body {
     align-items: center;
     position: relative;
     height: 100vh;
+    background-image: url('static/images/your-image.jpg');
 }
 
 .hero-section-group {
