--- a/static/css/public_styling.css
+++ b/static/css/public_styling.css
@@ -83,7 +83,8 @@ h1 {
 
 .second-section-group-cards-part {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
@@ -91,6 +92,11 @@ h1 {
     background-color: #ffe066;
     padding: 25px 15px;
     border-radius: 8px;
+    max-width: 360px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .second-section-card span {
@@ -104,4 +110,3 @@ h1 {
     font-size: 2rem;
     font-weight: 400;
 }
-
